[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/GameCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://materials/dark_grey.tres" type="Material" id=2]
[ext_resource path="res://scripts/CassetteSlot.gd" type="Script" id=3]
[ext_resource path="res://music/NineCircles.tres" type="Resource" id=4]
[ext_resource path="res://scripts/Splicer.gd" type="Script" id=5]
[ext_resource path="res://scenes/Cassette.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/Switch.gd" type="Script" id=7]
[ext_resource path="res://materials/white.tres" type="Material" id=8]
[ext_resource path="res://scripts/Knob.gd" type="Script" id=9]
[ext_resource path="res://materials/display.tres" type="Material" id=10]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="ConcavePolygonShape" id=12]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="PlaneMesh" id=14]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.329523, 0.20913, 0.0962989 )

[sub_resource type="AudioStreamGenerator" id=13]
buffer_length = 0.11

[sub_resource type="ProceduralSky" id=9]

[sub_resource type="Environment" id=10]
background_mode = 2
background_sky = SubResource( 9 )
background_sky_orientation = Basis( -0.939693, 0, 0.34202, 0, 1, 0, -0.34202, 0, -0.939693 )
ssao_enabled = true
glow_enabled = true
glow_bicubic_upscale = true
glow_high_quality = true

[node name="Spatial" type="Spatial"]

[node name="GameCamera" parent="." instance=ExtResource( 1 )]

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.825488, 0.535402, -0.178645, -0.097535, 0.447064, 0.889169, 0.555928, -0.716574, 0.421266, 0, 2.58332, 2.3873 )
shadow_enabled = true

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 2.73401, 0, 0, 0, 0.098231, 0, 0, 0, 2.07637, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Floor"]

[node name="CollisionShape" type="CollisionShape" parent="Floor/StaticBody"]
shape = SubResource( 2 )

[node name="Cassette" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.682573, 0.570283, -1.15458 )
initial_content = ExtResource( 4 )

[node name="Cassette2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02685, 0.570283, -1.15458 )

[node name="Cassette3" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.37158, 0.570283, -1.15458 )

[node name="FrontTable" type="Spatial" parent="."]

[node name="Mesh" type="MeshInstance" parent="FrontTable"]
transform = Transform( 2.43062, 0, 0, 0, 0.262064, 0, 0, 0, 0.666254, 0, 0.308219, -1.33601 )
mesh = SubResource( 1 )
skeleton = NodePath("../..")
material/0 = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="FrontTable/Mesh"]

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Mesh/StaticBody"]
shape = SubResource( 3 )

[node name="Splicer" type="Spatial" parent="FrontTable"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.657045, 0.574724, -1.32832 )
script = ExtResource( 5 )
screen_mat = ExtResource( 10 )

[node name="Mesh2" type="MeshInstance" parent="FrontTable/Splicer"]
transform = Transform( 0.800235, 0, 0, 0, 0.192503, 0, 0, 0, 0.340323, -0.0157464, 0.188088, -0.00769424 )
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="FrontTable/Splicer/Mesh2"]

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Splicer/Mesh2/StaticBody"]
shape = SubResource( 12 )

[node name="Display" type="MeshInstance" parent="FrontTable/Splicer"]
transform = Transform( 0.250219, -9.08877e-09, 4.1489e-16, 0, -2.63109e-09, -0.0628599, 3.7782e-08, 0.0601922, -2.74769e-09, -0.0157464, 0.286271, 0.355742 )
mesh = SubResource( 14 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 10 )

[node name="PlaybackSwitch" type="MeshInstance" parent="FrontTable/Splicer"]
transform = Transform( 0.0801242, 0, 0, 0, 0.00987545, 0, 0, 0, 0.0916319, -0.578664, 0.0695667, 0.421176 )
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 2 )
script = ExtResource( 7 )
hovered_mat = ExtResource( 8 )
default_mat = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="FrontTable/Splicer/PlaybackSwitch"]

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Splicer/PlaybackSwitch/StaticBody"]
shape = SubResource( 12 )

[node name="StartKnob" type="MeshInstance" parent="FrontTable/Splicer"]
transform = Transform( 0.070761, 0, 0, 0, 0.0664244, 0, 0, 0, 0.0640789, -0.219069, 0.117319, 0.366381 )
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 2 )
script = ExtResource( 9 )
hovered_mat = ExtResource( 8 )
default_mat = ExtResource( 2 )
value = 16.0

[node name="StaticBody" type="StaticBody" parent="FrontTable/Splicer/StartKnob"]

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Splicer/StartKnob/StaticBody"]
shape = SubResource( 12 )

[node name="DurationKnob" type="MeshInstance" parent="FrontTable/Splicer"]
transform = Transform( 0.070761, 0, 0, 0, 0.0664244, 0, 0, 0, 0.0640789, 0.201474, 0.117319, 0.366381 )
mesh = SubResource( 1 )
skeleton = NodePath("../../..")
material/0 = ExtResource( 2 )
script = ExtResource( 9 )
hovered_mat = ExtResource( 8 )
default_mat = ExtResource( 2 )
value = 4.0

[node name="StaticBody" type="StaticBody" parent="FrontTable/Splicer/DurationKnob"]

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Splicer/DurationKnob/StaticBody"]
shape = SubResource( 12 )

[node name="InputSlot" type="Spatial" parent="FrontTable/Splicer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.575996, 0.233918, 0.332134 )
script = ExtResource( 3 )

[node name="InsertionPoint" type="Spatial" parent="FrontTable/Splicer/InputSlot"]
transform = Transform( -4.37114e-08, 4.37114e-08, 1, 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="FrontTable/Splicer/InputSlot"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="FrontTable/Splicer/InputSlot/StaticBody"]
shape = SubResource( 11 )

[node name="Player" type="AudioStreamPlayer3D" parent="FrontTable/Splicer"]
stream = SubResource( 13 )
unit_size = 100.0
emission_angle_degrees = 90.0
attenuation_filter_db = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[connection signal="inserted" from="FrontTable/Splicer/InputSlot" to="FrontTable/Splicer" method="_on_source_insert"]
[connection signal="removed" from="FrontTable/Splicer/InputSlot" to="FrontTable/Splicer" method="_on_source_removed"]
